--- a/scss/_tabs.scss
+++ b/scss/_tabs.scss
@@ -24,6 +24,7 @@
         @extend .material-icons;
         width: 24px;
         text-align: center;
+        overflow: hidden;
       }
   
     }
